[package]
name = "bip39-keygen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5.17", features = ["derive", "env"] }
inquire = "0.7.5"
home = "0.5.9"
bip39 = { version = "2.0.0", features = ["rand", "zeroize"] }
ssh-key = { version = "0.6.6", features = ["ed25519"] }
ssh-encoding = "0.2.0"
whoami = "1.5.2"
tempfile = "3"
secrecy = "0.10.3"
zeroize = "1.8.1"

[build-dependencies]
vergen = { version = "8.3.2", features = ["build", "git", "git2"] }
